--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^10.0.0",
     "ngx-toastr": "^18.0.0",
+    "openai": "^4.24.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
