--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "task-manager-app",
   "version": "0.0.0",
+  "license": "MIT",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
