--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,7 +10,7 @@ on:
 # Environment variables available to all jobs and steps in this workflow
 env:
   APP_LOCATION: "/" # Location of client code
-  APP_ARTIFACT_LOCATION: "dist/ai-task-manager" # Location of client code build output
+  APP_ARTIFACT_LOCATION: "dist/ai-task-manager/browser" # Location of client code build output
   AZURE_STATIC_WEB_APPS_API_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} # Secret containing deployment token for the static web app
 
 permissions:
@@ -33,7 +33,7 @@ jobs:
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ env.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }} 
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
           app_location: ${{ env.APP_LOCATION }}
           app_artifact_location: ${{ env.APP_ARTIFACT_LOCATION }}
